# Hakken

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  blog.md  example.py  hakken.sh  hakken_agent_dataflow.md  learn.md  line.md  loop.md  main.py  package-lock.json  plan.md  pyproject.toml  research_agent.py  run_tests.py  setup.cfg  start.sh  test.py  todo.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
APP/: app.html
artifacts/web_search/: about-queries-testing-library-content.txt
deep_research_out/reports/: solar_energy_research_report.md
dry-run/: t1.py
hakken/: __init__.py  factory.py
hakken-agent/: .gitignore  build.sh  package-lock.json  package.json  test_messages.py  tsconfig.json
hakken-agent/examples/: message_usage.py
hakken-agent/src/: README.md  bridge.py  index.js  setup.js  ui.tsx
hakken-agent/src/components/: Header.tsx  InputBox.tsx  MessageItem.tsx  index.ts
hakken-agent/src/hooks/: usePythonBridge.ts
hakken-agent/src/python/: __init__.py
hakken-agent/ui/components/: CurrentResponse.tsx  Header.tsx  LoadingIndicator.tsx  MarkdownText.tsx  ThinkingIndicator.tsx  ToolApprovalPrompt.tsx
hakken-agent/ui/hooks/: index.ts  useKeyboardShortcuts.ts  usePythonBridge.ts  useQuoteRotation.ts  useTerminalSize.ts
hakken/core/: agent.py  models.py  utils.py
hakken/planning/: executor.py  models.py  planner.py
hakken/subagents/: manager.py  models.py  subagent.py
hakken/tools/: builtin_tools.py  models.py  registry.py
notebooks/: 00_llm_call.ipynb  01_react_agent.ipynb  02_memory.ipynb  README.md  ai_research.txt
notebooks/agent_memory/: conversations.json  facts.json  projects.json  user_preferences.json
result/: final_report.md
src/: __init__.py  deep_agent.py  hakken_main.py  loop.py  main.py
src/Hakken/integrations/: __init__.py  search.py
src/agent/: conversation_agent.py  interrupt_manager.py  learn.md  loop.py  message_processor.py  response_handler.py  state_manager.py  tool_executor.py
src/client/: openai_client.py
src/core/: __init__.py  agent.py  client.py  test.ipynb
src/hakken/: cli.py  terminal_bridge.py
src/hakken.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hakken/core/: __init__.py  agent.py  client.py  config.py  factory.py  message_builder.py  models.py  response_handler.py  state.py  tool_executor.py
src/hakken/history/: __init__.py  manager.py  tracer.py
src/hakken/utils/: git.py  (+6 more)
src/history/: conversation_history.py
src/interface/: __init__.py  base_ui.py  chat_input_handler.py  components.py  conversation_display.py  display_ui.py  interaction_ui.py  responsive_config.py  textual_interface.py  theme.py  user_interface.py
src/memory/: task_memory.py
src/prompt/: prompt_manager.py
src/tools/: command_runner.py  context_cropper.py  file_editor.py  file_reader.py  git_tools.py  grep_search.py  human_interrupt.py  task_delegator.py  task_memory_tool.py  todo_writer.py  tool_interface.py  tool_manager.py  web_search.py
terminal_ui/: package-lock.json  package.json  tsconfig.json
terminal_ui/src/: App.tsx  types.ts
tests/: __init__.py  conftest.py  run_tests.py  test_agent_core_functionality.py  test_agent_integration.py
tests/agent/: test_conversation_agent.py
tests/integration/: test_agent.py
tests/test_tools/: test_search.py
tests/tools/: test_command_runner.py  test_file_editor.py  test_file_reader.py  test_git_tools.py  test_grep_search.py  test_todo_writer.py  test_tool_interface.py  test_web_search.py
tests/unit/: test_core.py  test_json_utils.py  test_prompts.py  test_todo_tool.py  test_tools.py
tutorials/: llm_call.ipynb
(+69 files in other folders)
