[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hakken"
version = "0.1.0"
description = "ai agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.4",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "openai>=2.5.0",
    "pydantic>=2.12.3",
    "ruff>=0.14.1",
    "tavily-python>=0.7.12",
    "textual>=6.3.0",
]

[tool.setuptools.packages.find]
where = ["hakken-agent/src"]
include = ["python*"]

[project.scripts]
hakken = "python.core.agent:main"
