[project]
name = "hakken"
version = "0.1.0"
description = "An autonomous AI coding agent for the terminal."
authors = [{name = "saurabhaloneai", email = "youremail@example.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["cli", "tools", "ai", "agent", "coding"]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruff>=0.14.7",
]

[project.urls]
Homepage = "https://github.com/saurabhaloneai/hakken"
Repository = "https://github.com/saurabhaloneai/hakken"

[project.scripts]
hakken = "hakken.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
