[metadata]
name = hakken
version = 0.1.0
description = A command-line interface for managing interactions and tools.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/hakken
license = MIT
keywords = hakken, cli, tools, agent, prompts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    numpy

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
    pre-commit

[options.entry_points]
console_scripts =
    hakken-cli = hakken.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Test
python_functions = test_*